--- a/CSS/home/introducao.css
+++ b/CSS/home/introducao.css
@@ -1,7 +1,7 @@
 /* Css da introdução do site */
 .introducao-bg {
   background: var(--cor-12);
-  box-shadow: inset 0 -120px #ffffff;
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
@@ -31,26 +31,13 @@
   margin-bottom: 32px;
 }
 
-.introducao h1 span {
-  color: #ffbb00;
-}
-
 .introducao p {
   margin-bottom: 20px;
 }
 
-@media (max-width: 1200px) {
-  .introducao h1 {
-    font-size: 48px;
-  }
-  .introducao p {
-    font-size: 18px;
-  }
-}
-
 @media (max-width: 800px) {
   .introducao-bg {
-    background: #111111;
+    background: var(--cor-11);
     padding-top: 40px;
     box-shadow: inset 0 -60px #ffffff;
   }
@@ -62,7 +49,6 @@
     padding-bottom: 0px;
   }
   .introducao h1 {
-    font-size: 32px;
     margin-bottom: 16px;
   }
   .introducao img {
